# scrutin

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SCHEMA.md  TODO.md  pyproject.toml  zensical.toml
.github/actions/check_py/: action.yml
.github/actions/check_r/: action.yml
.github/actions/check_r_pkg/: action.yml
.github/actions/install_python/: action.yml
.github/actions/install_r/: action.yml
.github/actions/install_scrutin/: action.yml
.github/actions/install_tools/: action.yml
.github/workflows/: publish-crates.yml  release-vscode.yml  release.yml
crates/scrutin-bin/: Cargo.toml  SKILL.md  build.rs
crates/scrutin-bin/src/cli/: init_template.toml  mod.rs  style.rs
crates/scrutin-bin/src/cli/reporter/: github.rs  mod.rs  plain.rs
crates/scrutin-bin/tests/: ci_flaky_and_max_fail.rs  ci_reporters.rs  ci_reruns_and_metadata.rs  ci_run_great_expectations_fixture.rs  ci_run_pytest_fixture.rs  ci_run_r_fixture.rs
crates/scrutin-core/: Cargo.toml
crates/scrutin-core/src/: agent.rs  filter.rs  git.rs  keymap.rs  lib.rs  logbuf.rs  metadata.rs  noticebuf.rs  preflight.rs  report.rs
crates/scrutin-core/src/analysis/: deps.rs  hashing.rs  mod.rs  walk.rs
crates/scrutin-core/src/engine/: command_pool.rs  mod.rs  pool.rs  protocol.rs  run_events.rs  runner.rs  watcher.rs
crates/scrutin-core/src/project/: config.rs  hooks.rs  mod.rs  package.rs  plugin.rs
crates/scrutin-core/src/prose/: mod.rs
crates/scrutin-core/src/prose/skyspell/: mod.rs  plugin.rs
crates/scrutin-core/src/prose/typos/: mod.rs  plugin.rs
crates/scrutin-core/src/python/: imports.rs  mod.rs
crates/scrutin-core/src/python/great_expectations/: mod.rs  plugin.rs  runner.py
crates/scrutin-core/src/python/pytest/: mod.rs  plugin.rs  runner.py
crates/scrutin-core/src/python/ruff/: mod.rs  plugin.rs
crates/scrutin-core/src/r/: depmap.rs  mod.rs  runner_pointblank.R  runner_r.R  runner_testthat.R  runner_tinytest.R  runner_validate.R
crates/scrutin-core/src/r/jarl/: mod.rs  plugin.rs
crates/scrutin-core/src/storage/: sqlite.rs
crates/scrutin-core/src/storage/sql/: delete_dependencies.sql  delete_hashes.sql  delete_test_dependencies.sql  flaky_tests.sql  insert_dependency.sql  insert_result.sql  insert_run.sql  schema.sql  select_dependencies.sql  select_hashes.sql  slow_tests.sql  upsert_extra.sql  upsert_hash.sql
crates/scrutin-core/tests/: dep_map.rs  engine_pool.rs
crates/scrutin-tui/: Cargo.toml
crates/scrutin-tui/src/: input.rs  keymap.rs  lib.rs  state.rs
crates/scrutin-tui/src/view/: breadcrumb.rs  counts.rs  detail.rs  failure.rs  file_list.rs  hints.rs  icons.rs  layout.rs  log.rs  mod.rs  normal.rs  overlays.rs  sort.rs  source.rs
crates/scrutin-web/: Cargo.toml  build.rs
crates/scrutin-web/frontend/: app.js  index.html  style.css
crates/scrutin-web/frontend/modules/: api.js  events.js  help.js  keymap.js  levels.js  navigation.js  palettes.js  render.js  sort.js  sources.js  state.js  theme.js  util.js
crates/scrutin-web/src/: assets.rs  highlight.rs  lib.rs  server.rs  state.rs  wire.rs  wire_tests.rs
crates/scrutin-web/src/routes/: control.rs  events.rs  mod.rs  snapshot.rs  static_files.rs
demo/: .gitignore  DESCRIPTION  PROSE.md  pyproject.toml  skyspell.toml
demo/.scrutin/: config.toml  runner_pointblank.R  runner_pytest.py  runner_r.R
demo/R/: lint.R  math.R  strings.R
demo/inst/tinytest/: test_errors.R  test_scrutindemo.R  test_skips.R  test_warnings.R
demo/man/: scrutindemo-package.Rd
demo/src/scrutindemo_py/: __init__.py  lint.py
demo/tests/: test_math.py  test_strings.py  testthat.R
demo/tests/great_expectations/: test_orders.py
demo/tests/pointblank/: test_users.R
demo/tests/testthat/: test-math.R  test-strings.R  test-warnings.R
demo/tests/validate/: test_cars.R
docs/: 404.html  filtering.md  getting-started.md  history.md  index.html  index.md  installation.md  internals.md  keybindings.md  llms-full.txt  llms.md  llms.txt  parallelism.md  project-discovery.md  roadmap.md  search.json  sitemap.xml  watch-mode.md
docs-src/: editors.md  filtering.md  frontends.md  getting-started.md  history.md  history.md.in  index.md  installation.md  internals.md  keybindings.md  parallelism.md  project-discovery.md  reporters.md  roadmap.md  tui.md  watch-mode.md
docs-src/developer/: internals.md  protocol.md  testing.md
docs-src/frontends/: index.md  rstudio.md
docs-src/overrides/partials/: header.html
docs-src/reference/: cli.md  configuration.md  configuration.md.in
docs-src/reporters/: github.md  index.md  list.md
docs-src/stylesheets/: catppuccin.css  home.css
docs-src/tools/: great-expectations.md  jarl.md  pointblank.md  pytest.md  ruff.md  skyspell.md  testthat.md  tinytest.md  typos.md  validate.md
docs/developer/: protocol.md  testing.md
docs/developer/internals/: index.html
docs/developer/protocol/: index.html
docs/developer/testing/: index.html
docs/editors/: index.html
docs/filtering/: index.html
docs/frontends/: index.html  index.md  positron.md  terminal-ui.md  vscode.md  web.md
docs/frontends/positron/: index.html
docs/frontends/rstudio/: index.html
docs/getting-started/: index.html
docs/history/: index.html
docs/installation/: index.html
docs/internals/: index.html
docs/js/: lightbox.js
docs/keybindings/: index.html
docs/llms/: index.html
docs/parallelism/: index.html
docs/project-discovery/: index.html
docs/reference/: cli.md  configuration.md  configuration.md.in
docs/reporters/: github.md  index.html  junit.md  plain.md
docs/roadmap/: index.html
docs/stylesheets/: catppuccin-palette.css  catppuccin.css  home.css  nord-palette.css  nord.css
docs/tools/: great-expectations.md  jarl.md  pytest.md  ruff.md  skyspell.md  testthat.md  tinytest.md  typos.md
docs/tui/: index.html
docs/watch-mode/: index.html
editors/rstudio/: DESCRIPTION  NAMESPACE
editors/vscode/: .vscodeignore  README.md  build-webview.mjs  package-lock.json  package.json  tsconfig.json  webview-overrides.css
skills/scrutin/: SKILL.md
(+36 files in other folders)
