[workspace]
resolver = "2"
members = ["crates/scrutin-core", "crates/scrutin-tui", "crates/scrutin-web", "crates/scrutin-bin"]

[workspace.package]
version = "0.0.1-alpha.1"
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
notify = "8"
toml = "0.8"
dirs = "6"
ratatui = "0.30"
crossterm = "0.29"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time", "fs", "signal", "net"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
syntect = { version = "5", default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "regex-fancy", "html"] }
axum = { version = "0.8", features = ["tokio", "http1", "json", "macros"] }
rusqlite = { version = "0.39", features = ["bundled"] }
