[workspace]
resolver = "2"
members = ["crates/scrutin-core", "crates/scrutin-tui", "crates/scrutin-web", "crates/scrutin-bin"]

[workspace.package]
version = "0.0.15"
edition = "2024"
description = "Quality dashboard, file watcher, and parallel runner."
license = "MIT"
repository = "https://github.com/vincentarelbundock/scrutin"
homepage = "https://vincentarelbundock.github.io/scrutin"
authors = ["Vincent Arel-Bundock"]
readme = "README.md"
keywords = ["testing", "test-runner", "watch", "testthat", "pytest"]
categories = ["development-tools::testing", "command-line-utilities"]

[workspace.dependencies]
# Internal crates. `path` is used for local builds; `version` is what ends up
# on crates.io. Must be bumped in lockstep with `workspace.package.version`.
scrutin-core = { path = "crates/scrutin-core", version = "0.0.15" }
scrutin-tui  = { path = "crates/scrutin-tui",  version = "0.0.15" }
scrutin-web  = { path = "crates/scrutin-web",  version = "0.0.15" }

# External
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
notify = "8"
toml = "0.8"
dirs = "6"
ratatui = "0.30"
crossterm = "0.29"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time", "fs", "signal", "net"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
syntect = { version = "5", default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "regex-fancy", "html"] }
axum = { version = "0.8", features = ["tokio", "http1", "json", "macros"] }
rusqlite = { version = "0.39", features = ["bundled"] }
globset = "0.4"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 1
strip = "symbols"
