[project]
name = "scrutindemo-py"
version = "0.1.0"
description = "Python half of the scrutin triple-framework demo project."
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["pytest>=8", "great_expectations>=1.0", "pandas>=2.0", "ruff>=0.4"]

[tool.ruff]
# Opt-in marker for scrutin's ruff plugin.
line-length = 88
