[package]
name = "scrutin"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "scrutin_lib"
path = "src/lib.rs"

[[bin]]
name = "scrutin"
path = "src/main.rs"

[dependencies]
scrutin-core.workspace = true
scrutin-tui.workspace = true
scrutin-web.workspace = true
clap.workspace = true
anyhow.workspace = true
ratatui.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
clap-markdown = { version = "0.1", optional = true }
clap_mangen = { version = "0.2", optional = true }
clap_complete = { version = "4", optional = true }

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"

[features]
generate-docs = ["clap-markdown", "clap_mangen", "clap_complete"]
