[package]
name = "scrutin-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
notify.workspace = true
toml.workspace = true
dirs.workspace = true
xxhash-rust.workspace = true
chrono.workspace = true
tokio.workspace = true
rusqlite.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
