[package]
name = "scrutin-core"
version.workspace = true
edition.workspace = true
description = "Language-agnostic engine for scrutin: discovery, dep maps, NDJSON protocol, SQLite persistence."
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
notify.workspace = true
toml.workspace = true
dirs.workspace = true
xxhash-rust.workspace = true
chrono.workspace = true
tokio.workspace = true
rusqlite.workspace = true
uuid.workspace = true
globset.workspace = true

[dev-dependencies]
tempfile = "3"
