[package]
name = "scrutin-tui"
version.workspace = true
edition.workspace = true
description = "Ratatui frontend for scrutin: modal terminal UI over the scrutin-core run engine."
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
scrutin-core.workspace = true
anyhow.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
syntect.workspace = true
unicode-width = "0.2"
